Fix of some div aligning, and div sixes on large screens

--- a/src/app/modules/landing/components/about-niko/about-niko.component.scss
+++ b/src/app/modules/landing/components/about-niko/about-niko.component.scss
@@ -31,7 +31,7 @@
 
 /* ====== About paragraph and picture container ===== */
 .about-us-cont {
-  width: 80%;
+  width: 1200px;
   height: 700px;
   background-color: white;
   margin:auto;
@@ -172,7 +172,7 @@
 }
 
 #call-us-cont {
-  width: 70%;
+  width: 1000px;
   height: 250px;
   margin: auto;
   margin-top: 150px;
