--- a/src/app/modules/landing/components/menu/menu.component.scss
+++ b/src/app/modules/landing/components/menu/menu.component.scss
@@ -57,7 +57,7 @@
 
 /* =============== Menu bars - entrees =============== */
 .food-card {
-  width: 80%;
+  width: 1200px;
   height: 480px;
   margin: 30px auto;
   background-color: white;
@@ -109,6 +109,7 @@
 
   &-inner {
     display: flex;
+    justify-content: center;
   }
 }
 
@@ -139,6 +140,11 @@
 
   box-shadow: 2px 2px 2px grey;
   text-align: center;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(0.95);
+  }
 
   &__img {
     background-color: black;
